jupyterhub/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub
spec:
  selector:
    app: jupyterhub
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
