jupyterhub/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: test.morgan-coulm.fr
      http:
        paths:
          - path: /jupyterhub
            pathType: Prefix
            backend:
              service:
                name: jupyterhub-service
                port:
                  number: 80
